# dprint

./: .dprintrc.json  .gitattributes  .gitignore  .npmignore  .rustfmt.toml  .travis.yml  CNAME  Cargo.toml  Cross.toml  LICENSE  README.md  _claude.sh  cross-loongarch64.Dockerfile  dprint.config  dprint.config.js  dprint.config.json  dprint.json  implemented-nodes.md  index.html  install.sh  loongarch64.Dockerfile  output.txt  package.json  proto-plugin.toml  rollup.config.js  rust-toolchain.toml  scripts.js  style.11a122c141.css  style.31c6535258.css  style.4589ee48ed.css  style.css  tsconfig.common.json  tsconfig.json  tsconfig.rollup.json  wasm-pack-install.sh
crates/cli-core/: Cargo.toml
crates/cli-core/src/: checksums.rs  lib.rs  output_lock.rs  progress_bars.rs  terminal.rs  text_utils.rs  types.rs  url_utils.rs
crates/cli-core/src/logging/: confirm.rs  log_action_with_progress.rs  logger.rs  mod.rs  multi_select.rs  progress_bars.rs  select.rs
crates/cli-core/src/progress_bars/: mod.rs
crates/core/: Cargo.toml  README.md
crates/core-macros/: Cargo.toml  LICENSE
crates/core-macros/src/: lib.rs
crates/core/src/: async_runtime.rs  configuration.rs  configuration_tests.rs  lib.rs  plugins.rs  print_write_items.rs  types.rs  writer.rs  writer_tests.rs
crates/core/src/collections/: mod.rs
crates/core/src/communication/: message.rs  mod.rs  reader_writer.rs  utils.rs
crates/core/src/formatting/: actions.rs  condition_helpers.rs  condition_resolvers.rs  conditions.rs  get_write_items.rs  id.rs  infinite_reevaluation_protection.rs  mod.rs  print.rs  print_items.rs  print_write_items.rs  printer.rs  thread_state.rs  tracing.rs  write_items.rs  writer.rs
crates/core/src/formatting/collections/: fast_cell_map.rs  graph_node.rs  mod.rs  node_stack.rs  rc_stack.rs  vec_u32_map.rs
crates/core/src/formatting/ir_helpers/: gen_separated_values.rs  helpers.rs  mod.rs
crates/core/src/formatting/parser_helpers/: helpers.rs  mod.rs  parse_separated_values.rs
crates/core/src/formatting/tokens/: mod.rs  token_finder.rs
crates/core/src/formatting/utils/: counter_cell.rs  mod.rs  string_utils.rs  thread_local_bump_allocator.rs
crates/core/src/parser_helpers/: helpers.rs
crates/core/src/plugins/: mod.rs  plugin_handler.rs  plugin_info.rs
crates/core/src/plugins/process/: communication.rs  communicator.rs  context.rs  errors.rs  mod.rs  (+9 more)
crates/core/src/process/: message_processor.rs  mod.rs  shared_types.rs  stdin_out_reader_writer.rs
crates/core/src/tokens/: token_finder.rs
crates/core/src/utils/: string_utils.rs
crates/core/tests/: reevaluation_protection_test.rs  sample_example_test.rs  tracing_test.rs
crates/development/: Cargo.toml  README.md
crates/development/src/: config_helpers.rs  file_system_helpers.rs  lib.rs  spec_helpers.rs  spec_parser.rs
crates/development/trace_analyzer/: app.css  app.js  globals.d.ts  tsconfig.json  types.d.ts
crates/dprint/: .gitignore  Cargo.toml  LICENSE  build.rs  clippy.toml
crates/dprint-plugin-jsonc/: Cargo.toml  README.md
crates/dprint-plugin-jsonc/src/: lib.rs  plugin.rs  wasm_plugin.rs
crates/dprint-plugin-jsonc/src/configuration/: resolve_config.rs
crates/dprint-plugin-jsonc/src/parser/: context.rs  mod.rs  parse.rs
crates/dprint-plugin-typescript/: Cargo.toml
crates/dprint-plugin-typescript/src/: formatter.rs  lib.rs  plugin.rs  wasm_plugin.rs
crates/dprint-plugin-typescript/src/configuration/: builder.rs  resolve_config.rs  types.rs
crates/dprint-plugin-typescript/src/parsing/: comments.rs  parser.rs  parser_types.rs  tokens.rs
crates/dprint-plugin-typescript/src/swc/: mod.rs  parse_swc_ast.rs
crates/dprint-plugin-typescript/src/utils/: char_iterator.rs  is_prefix_semi_colon_insertion_char.rs
crates/dprint-plugin-typescript/tests/: test.rs
crates/dprint/src/: arg_parser.rs  create_formatter.rs  factory.rs  format.rs  main.rs  paths.rs  patterns.rs  resolution.rs  run_cli.rs  scope.rs  test_helpers.rs  types.rs
crates/dprint/src/cache/: cache.rs  cache_file.rs  manifest.rs  mod.rs
crates/dprint/src/cli/: arg_parser.rs  editor_service.rs  format.rs  format_context.rs  incremental.rs  mod.rs  paths.rs  patterns.rs  plugins.rs  run_cli.rs  stdin_reader.rs
crates/dprint/src/commands/: config.rs  editor.rs  formatting.rs  general.rs  mod.rs  upgrade.rs  windows_install.rs
crates/dprint/src/configuration/: deserialize_config.rs  get_global_config.rs  get_init_config_file_text.rs  get_plugin_config_map.rs  manipulation.rs  mod.rs  project_type.rs  resolve_config.rs  resolve_main_config_path.rs  types.rs
crates/dprint/src/environment/: canonicalized_path_buf.rs  environment.rs  mod.rs  progress_bars.rs  real_environment.rs  test_environment.rs  test_environment_builder.rs
crates/dprint/src/incremental/: incremental_file.rs  mod.rs
crates/dprint/src/plugins/: cache.rs  cache_fs_locks.rs  cache_manifest.rs  cache_meta.rs  collection.rs  common.rs  helpers.rs  initialize.rs  mod.rs  name_resolution.rs  npm_resolution.rs  plugin.rs  plugin_cache.rs  plugin_cache_manifest.rs  plugin_resolver.rs  plugin_source_reference.rs  pool.rs  resolver.rs  setup_plugin.rs  types.rs
crates/dprint/src/utils/: cached_downloader.rs  certs.rs  checksums.rs  command.rs  error_count_logger.rs  extract_zip.rs  file_path_utils.rs  file_text.rs  fs.rs  get_bytes_hash.rs  get_difference.rs  get_table_text.rs  gitignore.rs  glob_utils.rs  lax_single_process_fs_flag.rs  mod.rs  no_proxy.rs  npm_specifier.rs  path_source.rs  pretty_print_json_text.rs  process.rs  reset_events.rs  resolve_url_or_file_path.rs  semaphore.rs  stdin_reader.rs  sync.rs  table_text.rs  terminal.rs  text_changes.rs  thread_exit_signal.rs  unsync.rs  update_checker.rs  url.rs
crates/dprint/test/plugin/: Cargo.toml  build.ps1
crates/dprint/tests/: dll_imports.rs
crates/test-plugin/: Cargo.toml  LICENSE  build.sh  rebuild.sh  test_plugin.wasm  test_plugin_0_1_0.wasm
crates/test-plugin/src/: lib.rs
crates/test-process-plugin/: Cargo.toml  LICENSE  test-process-plugin.plugin
crates/test-process-plugin/src/: main.rs  types.rs
(+1488 files in other folders)
