[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/core-macros",
  "crates/development",
  "crates/dprint",
  "crates/test-process-plugin",
]
# excluded because this needs to be compiled as wasm to work
exclude = [
  "crates/test-plugin",
]

[workspace.dependencies]
anyhow = "1.0.98"
indexmap = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
similar = "2.7.0"
sys_traits = "=0.1.28"
thiserror = "=2.0.18"
tokio = { version = "1.37.0", features = ["rt", "time", "macros", "rt-multi-thread"] }

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

# TEMP: test the Windows on ARM support in corosensei (pulled in by wasmer-vm)
# before it is released to crates.io.
[patch.crates-io]
corosensei = { git = "https://github.com/dsherret/corosensei", branch = "feat_windows_arm" }
