[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/core-macros",
  "crates/development",
  "crates/dprint",
  "crates/test-process-plugin",
]
# excluded because this needs to be compiled as wasm to work
exclude = [
  "crates/test-plugin",
]

[workspace.dependencies]
anyhow = "1.0.98"
indexmap = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
similar = "2.7.0"
sys_traits = "=0.1.28"
thiserror = "=2.0.18"
tokio = { version = "1.37.0", features = ["rt", "time", "macros", "rt-multi-thread"] }

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

# TEMP: test the Windows on ARM support in corosensei and the matching wasmer-vm
# trap-handling change before either is released to crates.io. The wasmer crates
# come from a 7.1.0 worktree of the wasmer fork with the trap-handling fix
# cherry-picked onto it (the fork's main is 7.2.0-alpha.3, which drops the wasmi
# backend dprint needs); its internal path deps pull the rest of wasmer.
[patch.crates-io]
corosensei = { git = "https://github.com/dsherret/corosensei", branch = "feat_windows_arm" }
wasmer = { git = "https://github.com/dsherret/wasmer", branch = "feat_windows_arm_7.1.0" }
wasmer-compiler = { git = "https://github.com/dsherret/wasmer", branch = "feat_windows_arm_7.1.0" }
