[package]
name = "dprint-cli-core"
version = "0.9.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Core Dprint CLI library for reuse."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
parking_lot = "0.11.2"
sha2 = "0.9.8"
ureq = { version = "2.2.0", features = ["tls"] }
