[package]
name = "dprint-cli-core"
version = "0.10.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Core Dprint CLI library for reuse."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
crossterm = "0.22.1"
parking_lot = "0.11.2"
sha2 = "0.10.1"
ureq = { version = "2.4.0", features = ["tls"] }
