[package]
name = "dprint-core-macros"
version = "0.1.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint/tree/main/crates/core-macros"
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Core formatting macros for dprint-core."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
