[package]
name = "dprint-core"
version = "0.66.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint/tree/main/crates/core"
keywords = ["formatting", "formatter"]
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Core library for dprint."

[features]
default = ["formatting"]

async_runtime = ["async-trait", "futures", "parking_lot", "tokio", "tokio-util"]
formatting = ["bumpalo", "hashbrown", "rustc-hash", "unicode-width"]
communication = ["crossbeam-channel", "async_runtime"]
process = ["communication", "serde_json", "libc", "winapi"]
wasm = []
tracing = ["formatting"]

[dependencies]
anyhow = "1.0.69"
async-trait = { version = "0.1.72", optional = true }
bumpalo = { version = "3.13.0", features = ["allocator-api2", "collections"], optional = true }
crossbeam-channel = { version = "0.5.7", optional = true }
futures = { version = "0.3.26", optional = true }
hashbrown = { version = "0.14.3", optional = true }
indexmap = { version = "2.0.2", features = ["serde"] }
parking_lot = { version = "0.12.1", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0", optional = true, features = ["preserve_order"] }
tokio = { version = "1", optional = true, features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7.7", optional = true }
unicode-width = { version = "0.1.10", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "synchapi", "winbase", "winerror"], optional = true }

[target.'cfg(not(any(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2.140", optional = true }
