[package]
name = "dprint-core"
version = "0.67.4"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint/tree/main/crates/core"
keywords = ["formatting", "formatter"]
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Core library for dprint."

[features]
default = ["formatting"]

async_runtime = ["async-trait", "futures", "parking_lot", "tokio", "tokio-util"]
formatting = ["bumpalo", "hashbrown", "rustc-hash", "unicode-width"]
communication = ["crossbeam-channel", "async_runtime"]
process = ["communication", "serde_json", "libc", "winapi"]
wasm = ["serde_json"]
tracing = ["formatting"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
async-trait = { version = "0.1.72", optional = true }
bumpalo = { version = "3.17.0", features = ["allocator-api2", "collections"], optional = true }
crossbeam-channel = { version = "0.5.14", optional = true }
futures = { version = "0.3.26", optional = true }
hashbrown = { version = "0.15.2", optional = true }
indexmap.workspace = true
parking_lot = { version = "0.12.1", optional = true }
rustc-hash = { version = "2.1.0", optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { version = "0.7.7", optional = true }
unicode-width = { version = "0.2.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "synchapi", "winbase", "winerror"], optional = true }

[target.'cfg(not(any(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2.140", optional = true }
