[package]
name = "dprint-development"
version = "0.10.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Helper functions for testing dprint plugins."

[dependencies]
anyhow.workspace = true
console = "0.15.2"
file_test_runner = "0.5.1"
serde_json.workspace = true
similar.workspace = true
