[package]
name = "dprint-development"
version = "0.11.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Helper functions for testing dprint plugins."

[dependencies]
console = "0.16.3"
file_test_runner = "0.12.1"
serde_json.workspace = true
similar.workspace = true
