[package]
name = "dprint-plugin-jsonc"
description = "JSONC formatter for dprint."
keywords = ["formatting", "formatter", "jsonc"]
version = "0.3.0"
authors = ["David Sherret <dsherret@gmail.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/dprint/dprint/tree/master/crates/dprint-plugin-jsonc"
repository = "https://github.com/dprint/dprint"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
dprint-core = { path = "../core", version = "0.20.0" }
jsonc-parser = { version = "0.9.0" }
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dprint-development = { path = "../development" }
debug-here = "0.2"
