[package]
name = "dprint-plugin-typescript"
description = "TypeScript formatter for dprint."
keywords = ["formatting", "formatter", "typescript"]
version = "0.19.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/dprint/dprint/tree/master/crates/dprint-plugin-typescript"
repository = "https://github.com/dprint/dprint"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
dprint-core = { path = "../core", version = "0.20.0" }
swc_common = "=0.5.12"
swc_ecma_ast = "=0.20.0"
swc_ecma_parser = "=0.23.1"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dprint-development = { path = "../development" }
debug-here = "0.2"
