[package]
name = "dprint"
version = "0.50.2"
authors = ["dprint code formatting <david@dprint.dev>"]
categories = ["development-tools"]
default-run = "dprint"
edition = "2024"
keywords = ["code-formatter", "formatter"]
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Binary for dprint code formatter—a pluggable and configurable code formatting platform."

[dependencies]
# all these deps are pinned because `cargo install dprint` doesn't lock deps
# without the `--locked` flag so this helps reduce the chance of a dep being
# released that breaks compiling dprint
anyhow = "=1.0.98"
clap = "=4.5.4"
clap_complete = "=4.5.2"
console_static_text = "=0.8.3"
crossterm = "=0.27.0" # manually retest everything when bumping this crate
dirs = "=6.0.0"
dissimilar = "=1.0.10"
dprint-core = { path = "../core", version = "=0.67.4", features = ["process", "wasm"] }
dunce = "=1.0.4"
fs3 = "=0.5.0"
ignore = "=0.4.23"
indexmap = { version = "=2.9.0", features = ["serde"] }
ipnet = "2.11.0"
jsonc-parser = { version = "=0.26.2", features = ["cst", "preserve_order"] }
once_cell = "=1.21.3"
parking_lot = "=0.12.3"
percent-encoding = "=2.3.1"
rand = "=0.9.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.140", features = ["preserve_order"] }
sha2 = "=0.10.9"
similar = { version = "=2.7.0", features = ["inline"] }
# disable the multi-threading feature of this crate
sysinfo = { version = "=0.35.1", features = ["system"], default-features = false }
text-size = "=1.1.1"
thiserror = "=2.0.12"
tokio = { version = "=1.37.0", features = ["rt", "time", "macros", "rt-multi-thread", "io-std"] }
tokio-util = { version = "=0.7.11" }
tower-lsp = "=0.20.0"
twox-hash = "=2.1.0"
url = "=2.5.4"
which = "8.0.0"
zip = "=2.4.1"

# keep these in sync
rustls = { version = "=0.23.19", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "=0.7.0"
rustls-pemfile = "=2.1.2"
ureq = { version = "=2.12.1", features = ["gzip", "socks-proxy", "tls"], default-features = false }
webpki-roots = "=0.26.7"

# pin these to prevent them changing with `cargo install` because
# patch version increases of rkyv may cause panics when deserializing
# data serialized with older versions
rkyv = "=0.8.10"
wasmer = "=6.1.0"
wasmer-compiler = "=6.1.0"

[target.'cfg(windows)'.dependencies]
winreg = "=0.55.0"

[dev-dependencies]
# stay on this version because it's good enough and makes the output the same on all platforms
path-clean = "0.1.0"
pretty_assertions = "1.4.0"
tempfile = "3.20"
