[package]
name = "dprint"
version = "0.55.1"
authors = ["dprint code formatting <david@dprint.dev>"]
categories = ["development-tools"]
default-run = "dprint"
edition = "2024"
keywords = ["code-formatter", "formatter"]
license = "MIT"
repository = "https://github.com/dprint/dprint"
description = "Binary for dprint code formatter—a pluggable and configurable code formatting platform."

[dependencies]
# all these deps are pinned because `cargo install dprint` doesn't lock deps
# without the `--locked` flag so this helps reduce the chance of a dep being
# released that breaks compiling dprint
anyhow.workspace = true
base64 = "=0.22.1"
clap = "=4.5.4"
clap_complete = "=4.5.2"
console_static_text = "=0.9.0"
crossterm = "=0.27.0" # manually retest everything when bumping this crate
deno_npmrc = "=0.9.0"
deno_terminal = "=0.2.3"
dirs = "=6.0.0"
dprint-core = { path = "../core", version = "=0.68.2", features = ["process", "wasm"] }
dunce = "=1.0.4"
flate2 = "=1.1.9"
fs3 = "=0.5.0"
ignore = "=0.4.23"
indexmap.workspace = true
ipnet = "2.11.0"
jsonc-parser = { version = "=0.32.4", features = ["cst", "preserve_order"] }
monch = "=0.6.0"
once_cell = "=1.21.3"
parking_lot = "=0.12.3"
percent-encoding = "=2.3.1"
rand = "=0.9.1"
serde.workspace = true
serde_json.workspace = true
sha2 = "=0.10.9"
similar = { workspace = true, features = ["inline"] }
sys_traits = { workspace = true, features = ["real"] }
# disable the multi-threading feature of this crate
sysinfo = { version = "=0.35.1", features = ["system"], default-features = false }
tar = "=0.4.45"
text-size = "=1.1.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tokio-util = { version = "=0.7.11" }
tower-lsp = "=0.20.0"
twox-hash = "=2.1.0"
url = "=2.5.4"
which = "=8.0.0"
zip = "=2.4.1"

# keep these in sync
rustls = { version = "=0.23.19", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "=0.7.0"
rustls-pemfile = "=2.1.2"
ureq = { version = "=2.12.1", features = ["gzip", "socks-proxy", "tls"], default-features = false }
webpki-roots = "=0.26.7"

# pin this to prevent it changing with `cargo install` because patch version
# increases of rkyv may cause panics when deserializing data serialized with
# older versions
rkyv = "=0.8.15"

# wasm plugin runtime (wasmtime). default features are disabled to keep the
# binary small — we only need to compile and run modules synchronously;
# component-model, async, winch, the wat parser, wasm GC, the on-disk cache and
# the pooling allocator are all unused.

# most targets: native Cranelift codegen.
[target.'cfg(not(any(target_arch = "powerpc64", target_arch = "loongarch64", target_os = "android")))'.dependencies]
wasmtime = { version = "=43.0.2", default-features = false, features = ["cranelift", "runtime", "std", "anyhow", "demangle", "addr2line"] }

# powerpc64/loongarch64 have no native Cranelift backend, and the Android sandbox
# lacks the signal-based traps native code needs, so these compile to Pulley
# bytecode (still via Cranelift) and interpret it. the `pulley` feature adds the
# bytecode emitter; the interpreter is already part of `runtime`.
[target.'cfg(any(target_arch = "powerpc64", target_arch = "loongarch64", target_os = "android"))'.dependencies]
wasmtime = { version = "=43.0.2", default-features = false, features = ["cranelift", "runtime", "std", "anyhow", "demangle", "addr2line", "pulley"] }

[target.'cfg(windows)'.dependencies]
winreg = "=0.55.0"

[dev-dependencies]
# stay on this version because it's good enough and makes the output the same on all platforms
path-clean = "0.1.0"
pretty_assertions = "1.4.0"
sys_traits = { workspace = true, features = ["memory"] }
tempfile = "3.20"
