[package]
name = "test-plugin"
version = "0.1.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.51"
dprint-core = { path = "../core", features = ["wasm"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
