[package]
name = "test-plugin"
version = "0.2.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.58"
dprint-core = { path = "../core", features = ["wasm"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
