[package]
name = "test-process-plugin"
version = "0.1.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dprint-core = { path = "../core", features = ["process"] }
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
