[package]
name = "test-process-plugin"
version = "0.1.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.51"
dprint-core = { path = "../core", features = ["process"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
